# 50.007-ML-Project

./: .gitignore  README.md  pyproject.toml  val_task1.ipynb  val_task2.ipynb
logs/logistic_optuna_20250810_231948/: best_pipeline.pkl  experiment_metadata.json  optuna_study.pkl  trials.csv
logs/model_testing/: LightGBM_Optimised.py  SVM_opt.py  XGBoost_Optimised.ipynb  catboost_opt.py  jh-exp-2.ipynb  xgboost_utils.py
logs/optuna_exp_20250810_213811/: best_hp.pkl  ensemble_metadata.json  experiment_metadata.json  final_results.json  trial_results.csv  trial_results.jsonl  trial_summary.csv
logs/optuna_exp_20250810_225430/: ensemble_metadata.json
model_testing/: CatBoost_Optimised.py  Ensemble_Optimised.py  LogisticRegression_Optimised.py  NaiveBayes_Optimised.py  RF_opt.py
submissions/xgb_optuna/: 20250809-2256-optuna.csv  jh-exp-2.ipynb  score.txt
submissions/xgb_random_forest_optuna/: 20250810-0944-optuna.csv  jh-exp-2.ipynb
submissions/xgboost1/: 20250809-2020.csv  jh-exp-1.ipynb  score.txt
task3/: Naive Bayes.ipynb  NaiveBayes_Prediction.csv  Optimized TF-IDF + Logistic Regression with Feature Selection.ipynb  Optimized_TFIDF_LR_Prediction.csv  amit_RF.py  custom_tfidf.py  custom_tfidf_clean.py  exp2.py  jh-exp-1.ipynb  jh-exp-2.ipynb  jh-exp-3.ipynb  logistic_optuna.py  template.ipynb
